# tab-capture-transcriber

./: .gitignore  README.md  ROADMAP.md  docker-compose.yml
backend/: Dockerfile.cpu  Dockerfile.gpu  README.md  docker-compose.yml  live_transcriber.py  pyproject.toml  requirements.txt  retranscribe.py  server.py  storage.py  transcriber.py
ext/: BACKEND_EXAMPLE.md  README.md  background.js  content.js  generate-icons.js  manifest.json  offscreen.html  offscreen.js  popup.html  popup.js  popup_new_section.txt  recorder.html  recorder.js
