[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "websockets>=12.0",
    "numpy>=1.24.0",
    "ffmpeg-python>=0.2.0",
    "rich>=13.0.0",
    "aiofiles>=23.0.0",
    "Pillow>=10.0.0",
    "faster-whisper>=1.2.1",
]
